syntax = "proto3";

package password;

import "google/protobuf/empty.proto";

service PasswordService {
  rpc List(stream ListPassword) returns (stream PasswordList);
  rpc Create(stream CreatePassword) returns (CreatePasswordResponse);
  rpc Update(UpdatePassword) returns (Password);
  rpc Delete(stream DeletePassword) returns (Password);
}

message Password {
  string id = 1;
  string createdAt = 2;
  string updatedAt = 3;
  string username = 4;
  string password = 5;
  optional string uri = 6;
  optional string imageSrc = 7;
  optional string description = 8;
}

message PasswordList {
  repeated Password items = 1;
  uint32 total = 2;
}

message ListPassword {
  string query = 1;
  uint32 pageSize = 2;
  uint32 pageIndex = 3;
}

message CreatePasswordResponse {
  repeated Password items = 1;
}

message CreatePassword {
  string username = 1;
  string password = 2;
  string uri = 3;
  string imageSrc = 4;
  string description = 5;
}

message UpdatePassword {
  string id = 1;
  optional string username = 2;
  optional string password = 3;
  optional string uri = 4;
  optional string imageSrc = 5;
  optional string description = 6;
}

message DeletePassword {
  string id = 1;
}